Add local docker and postgres